# Rust-Hexagonal

./: Cargo.toml  Makefile
migrations/: 20220728101902_init_tables.sql  20220728105056_test_users.sql  20220728135129_add_type_column_to_transaction.sql  20220728194316_add_index_to_user_account_number.sql  20220728220737_add_index_to_transaction_type.sql  20220728220744_add_index_to_created_on.sql
src/: main.rs
src/bank/: bank.rs  init.rs  mod.rs  operation.rs
src/bank/datastore/: datastore.rs
src/entity/: deposit.rs  mod.rs  transaction.rs  transfer.rs  withdraw.rs
src/errors/: error.rs
src/handler/http/: health.rs  mod.rs
