[package]
name = "rust-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
chrono = "0.4"
postgres = { version = "0.19.4", features = ["with-uuid-1"] }
uuid = { version = "1.1.2", features = ["v4"] }
log = "0.4.17"
env_logger = "0.9.1"
actix-web = "4"